Fix heading sizes on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -110,8 +110,12 @@ body {
 
 .title {
 	font-family: var(--font-family-heavy);
-	font-size: var(--big-header);
+	font-size: var(--heading-one);
 	color: var(--title-color);
+
+	@media (min-width: 768px) {
+		font-size: var(--big-header);
+	}
 }
 
 h1,
@@ -280,15 +284,27 @@ code {
 	}
 
 	h2 {
-		font-size: var(--heading-one);
+		font-size: var(--heading-two);
+
+		@media (min-width: 768px) {
+			font-size: var(--heading-one);
+		}
 	}
 
 	h3 {
-		font-size: var(--heading-two);
+		font-size: var(--heading-three);
+
+		@media (min-width: 768px) {
+			font-size: var(--heading-two);
+		}
 	}
 
 	h4 {
-		font-size: var(--heading-three);
+		font-size: var(--heading-four);
+
+		@media (min-width: 768px) {
+			font-size: var(--heading-three);
+		}
 	}
 
 	h2:hover > .anchor .jam-link,
